[project]
name = "tiny-pytorch"
version = "0.0.3"
description = "Mini Deep Learning framework similar to PyTorch"
authors = [
    {name = "ImadDabbura", email = "imad.dabbura@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
]

[tool.poetry]
packages = [{include = "tiny_pytorch"}]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
black = "^25.1"
pytest = "^8.3"
isort = "^6.0"
flake8 = "^7.1"
pre-commit = "^4.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6"
mkdocs-material = "^9.6"
mkdocstrings-python = "^1.16"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
