[project]
name = "tiny-pytorch"
version = "0.0.4"
description = "Mini Deep Learning framework similar to PyTorch"
authors = [
    {name = "Imad Dabbura", email = "imad.dabbura@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
]

[tool.poetry.group.build.dependencies]
pybind11 = "^2.10.0"

[tool.poetry]
packages = [{include = "tiny_pytorch"}]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
black = "^25.1"
pytest = "^8.3"
isort = "^6.0"
flake8 = "^7.1"
pre-commit = "^4.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6"
mkdocs-material = "^9.6"
mkdocstrings-python = "^1.16"
mike = "^2.1"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tiny_pytorch*"]

[tool.setuptools.package-data]
tiny_pytorch = ["*.cpp"]
